--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         </div><!--main__left-->
 
-        <form action="index.php" method="post" class="form">
+        <form action="http://212.109.198.164:3005/order?geo=IT9" method="post" class="form">
             <div class="discount">
                 <div class="discount__left">
                     <span class="discount__percent">-53%</span>
@@ -471,7 +471,7 @@
 
         </div><!--main__left-->
 
-        <form  action="index.php"  class="form" method="post">
+        <form  action="http://212.109.198.164:3005/order?geo=IT9"  class="form" method="post">
             <div class="discount">
                 <div class="discount__left">
                     <span class="discount__percent">-53%</span>
